# quillai

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  _typos.toml
.claude/: settings.local.json
app/: package.json  tsconfig.json
app/src/: App.tsx  frontend.tsx  index.css  index.tsx
app/src/components/markdown_editor/: MarkdownEditor.tsx  index.ts  types.ts
app/src/md_editor/: types.ts
app/src/md_editor/components/: Editor.tsx
crates/api/: Cargo.toml
crates/api/src/: cli.rs  error.rs  main.rs  prelude.rs
crates/app/: Cargo.toml  Dioxus.toml  input.css  tailwind.config.js
crates/app/assets/: tailwind.css
crates/app/src/: index.html  main.rs
crates/app/src/components/: editor.rs  mod.rs  quill.rs
crates/app/src/views/: blog.rs  editor.rs  mod.rs  navbar.rs
crates/blog/: Cargo.toml
crates/blog/assets/static/: index.html
crates/blog/config/: development.yaml  test.yaml
crates/blog/examples/: playground.rs
crates/blog/frontend/: package.json  rsbuild.config.ts
crates/blog/frontend/src/: App.tsx
crates/blog/frontend/src/components/: ApiButton.tsx
crates/blog/migration/: build.rs
crates/blog/migration/src/: lib.rs  m20250414_175636_comments.rs
crates/blog/src/: app.rs
crates/blog/src/controllers/: comment.rs  mod.rs  post.rs
crates/blog/src/initializers/: view_engine.rs
crates/blog/src/mailers/: auth.rs
crates/blog/src/models/: comments.rs  mod.rs  posts.rs
crates/blog/src/models/_entities/: comments.rs  mod.rs  posts.rs  prelude.rs
crates/blog/src/tasks/: user_report.rs
crates/blog/src/workers/: downloader.rs
crates/blog/tests/models/: mod.rs  posts.rs
crates/blog/tests/requests/: auth.rs  comment.rs  mod.rs  post.rs
crates/blog/tests/tasks/: user_report.rs
crates/delta/: Cargo.toml  README.md
crates/delta/examples/: ansi_output.rs  basic_usage.rs
crates/delta/src/: attributes.rs  delta.rs  diff.rs  lib.rs  op.rs  op_iterator.rs
crates/editor/: Cargo.toml
crates/editor/examples/: delta_integration.rs  minimal_setup.rs
crates/editor/examples/basic_editor_desktop/: Cargo.toml
crates/editor/examples/basic_editor_desktop/src/: main.rs
crates/editor/examples/basic_editor_web/: Cargo.toml  Dioxus.toml  index.html
crates/editor/examples/basic_editor_web/src/: main.rs
crates/editor/src/: editor.rs  emitter.rs  events.rs  handlers.rs  lib.rs  modules.rs  utils.rs
crates/editor/src/editor/: component.rs  contenteditable.rs  delta_integration.rs  delta_operations.rs  dom_integration.rs  input_handler.rs  integration_tests.rs  mod.rs  parchment_integration.rs  renderer.rs  state.rs
crates/editor/src/modules/: history.rs  keyboard.rs
crates/log/: Cargo.toml  README.md
crates/log/examples/: basic_log_usage.rs  comprehensive_logging.rs  json_output.rs  spans_demo.rs
crates/log/src/: lib.rs
crates/log/tests/: integration_tests.rs
crates/parchment/: Cargo.toml  DOC.md  IN_PROGRESS.md  README.md  TODO.md
crates/parchment/examples/: basic-usage.html  benchmark.html  editor-demo.html  index.html  interactive-demo.html  test-suite.html  test-visual.html  test.html  test.js  test_console.html  test_imports.html  test_signatures.html
crates/parchment/src/: attributor.rs  blot.rs  collection.rs  dom.rs  lib.rs  registry.rs  scope.rs  text_operations.rs  utils.rs
crates/parchment/src/attributor/: base.rs  class.rs  style.rs
crates/parchment/src/blot/: block.rs  embed.rs  factory.rs  formatting.rs  inline.rs  mutations.rs  parent.rs  scroll.rs  shadow.rs  shadow_simple.rs  text.rs  traits.rs  traits_simple.rs
crates/parchment/src/collection/: linked_list.rs
crates/parchment/src/registry/: dom_map.rs
crates/parchment/src/utils/: dom.rs
crates/parchment/tests/: README.md  test_attributor.html  test_class_attributor.html  test_style_attributor.html
crates/smtp/: Cargo.toml  README.md
crates/smtp/src/: cli.rs  main.rs  old.rs  parser.rs  server.rs
docs/: QuillJs.md
migrations/: 20250407204144_init.up.sql
xtask/: Cargo.toml
xtask/src/: main.rs
