[workspace]
members = ["xtask/", "crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Guzmán Monné"]

[profile.dev]
# Disabling debug info speeds up builds.
debug = 0

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0

[workspace.dependencies]
tokio = { version = "1.44.0", features = ["full"] }
env_logger = "0.11.3"
log = "0.4.22"
thiserror = "1.0.56"
anyhow = "1.0.97"
