[workspace]
members = ["xtask/", "crates/*"]
exclude = ["crates/editor/examples/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "./LICENSE"
authors = ["Guzmán Monné"]
repository = "https://github.com/cloudbridgeuy/quillai"

[profile.dev]
# Disabling debug info speeds up builds.
debug = 0

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[workspace.dependencies]
quillai_log = { version = "0.1.0", path = "./crates/log" }
quillai_delta = { version = "0.1.0", path = "./crates/delta" }
quillai_parchment = { version = "0.1.0", path = "./crates/parchment" }
clap = { version = "4.5.35", features = ["derive", "env", "string"] }
tokio = { version = "1.44.0", features = ["full"] }
env_logger = "0.11.3"
log = "0.4.22"
thiserror = "2.0.12"
anyhow = "1.0.97"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
async-trait = { version = "0.1.74" }
axum = "0.8.3"
axum-extra = { version = "0.10", features = ["form"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
sea-orm = { version = "1.1.0", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
uuid = { version = "1" }
dioxus = { version = "0.6" }
dioxus-web = { version = "0.6" }
