[package]
name = "api"
version = "0.1.0"
homepage = "https://github.com/cloudbridgeuy/quillai"
description = "QuillAi API"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum = "0.8.3"
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
listenfd = "1.0.2"
