[package]
name = "quillai_app"
version = "0.1.0"
homepage = "https://github.com/cloudbridgeuy/quillai/crates/app/README.md"
description = "QuillAi APP"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "quillai_app"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.6.3", features = ["router"] }
dioxus-logger = { version = "0.6.2" }
js-sys = "0.3.77"
syntect = { version = "5.2.0", default-features = false, features = [
  "default-fancy",
] }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
