[package]
name = "quillai_blog"
version = "0.1.0"
homepage = "https://github.com/cloudbridgeuy/quillai/crates/blog/README.md"
edition = "2021"
publish = false
default-run = "quillai-blog"

[dependencies]
loco-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sea-orm = { workspace = true }

regex = { version = "1.11.1" }
migration = { path = "migration" }
chrono = { version = "0.4" }
validator = { version = "0.20" }
uuid = { version = "1.6.0", features = ["v4"] }
include_dir = { version = "0.7" }
# view engine i18n
fluent-templates = { version = "0.8.0", features = ["tera"] }
unic-langid = { version = "0.9.4" }

[[bin]]
name = "quillai-blog"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.21.0" }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
