[package]
name = "quillai_delta"
version = "0.1.0"
homepage = "https://github.com/cloudbridgeuy/quillai/crates/delta/README.md"
description = "QuillAi Delta - Rewrite of [https://github.com/slab/delta](slab/delta)"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "ansi_output"
path = "examples/ansi_output.rs"
