[package]
name = "quillai_editor"
version = "0.1.0"
homepage = "https://github.com/cloudbridgeuy/quillai/crates/editor/README.md"
description = "QuillAI Editor - A modern rich text editor component for Dioxus applications"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "quillai_editor"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# QuillAI crates
quillai_delta = { workspace = true }

# Core Dioxus framework
dioxus = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
