[package]
name = "quillai_log"
version = "0.1.0"
homepage = "https://github.com/cloudbridgeuy/quillai/crates/log/README.md"
description = "QuillAi Log"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
log = { workspace = true, optional = true }

[features]
default = []
json = ["serde", "tracing-subscriber/json"]
log-compat = ["log"]

[dev-dependencies]
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
