[package]
name = "quillai_parchment"
version = "0.1.0"
homepage = "https://github.com/cloudbridgeuy/quillai/crates/parchment/README.md"
description = "QuillAi Delta - Rewrite of [https://github.com/slab/parchment](slab/parchment)"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Text",
  "MutationObserver",
  "MutationObserverInit",
  "MutationRecord",
  "NodeList",
  "Window",
  "DomTokenList",
  "CssStyleDeclaration",
  "NamedNodeMap",
  "Attr",
  "Selection",
  "Range",
  "DomRect",
] }
js-sys = "0.3"

# Optional dependencies for the HTTP server example
[dependencies.tokio]
version = "1.0"
features = ["full"]
optional = true

[dependencies.warp]
version = "0.3"
optional = true

[features]
default = []

[dev-dependencies]
