[package]
name = "quillai_smtp"
version = "0.1.0"
homepage = "https://github.com/cloudbridgeuy/quillai/crates/smtp/README.md"
description = "QuillAi SMTP Server"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "smtp"
path = "src/main.rs"

[dependencies]
quillai_log = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio-util = { version = "0.7.14", features = ["codec"] }
futures = "0.3.31"
regex = { version = "1.11.1", features = ["logging"] }
tokio-native-tls = "0.3.1"
native-tls = "0.2.14"
openssl = "0.10.72"
nom = "8.0.0"
